@@ -1,3 +1,11 @@
+2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-01-01
+	* adapt ShmBuffer interface change w.r.t. event discardal
+	* interpret empty buffer cells being passed as the signal to shut
+	down
+	
+
 2007-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-01-00
